[tool.poetry]
name = "simple-diffusion"
version = "0.1.0"
description = ""
authors = ["lilpacy <revivedtomorrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
ruff = "^0.8.2"
torchvision = "^0.20.1"
matplotlib = "^3.9.3"
tqdm = "^4.67.1"
datasets = "^3.2.0"
transformers = "^4.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
